replace deprecated Constructor based initialization of primitive type's Wrapper Class with WrapperClass.valueOf(value) (#488)